--- a/client/vite-project/src/index.css
+++ b/client/vite-project/src/index.css
@@ -10,4 +10,36 @@ body {
   font-style: normal;
 }
 
+.header-container{
+  margin: 1rem;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: red;
+  font-size: 2.5rem;
+
+}
+
+.chart-container{
+  position: relative;
+  margin: 1rem;
+  margin-left: 6rem;
+  width: 500px;
+}
+
+.total-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  position: absolute;
+  right: 0;
+  left: 0;
+  top: 40%;
+  font-size: 2rem;
+  
+}
+
 
