--- a/client/vite-project/src/index.css
+++ b/client/vite-project/src/index.css
@@ -21,6 +21,12 @@ body {
 
 }
 
+.upper-body{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  
+}
+
 .chart-container, .label-container{
   position: relative;
   margin: 1rem;
@@ -61,6 +67,40 @@ body {
 .label-colour{
   width: 20px;
   height: auto;
+}
+
+
+.form-container{
+  width: 500px;
+}
+
+.create-expense-form{
+  margin: 5rem;
+  margin-right: 10rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  
+}
+
+.create-expense-form input, .create-expense-form select{
+  width: 500px;
+  padding: 1rem;
+  border: none;
+  border-radius: 0.5rem;
+  background-color: white;
+  box-shadow:0 0 10px 2px rgba(0,0,0,0.1);
+}
+
+.create-expense-form button{
+  text-align: center;
+  width: 200px;
+  height: 50px;
+  background-color: black;
+  color: white;
+  font-size: 1rem;
+  border: none;
+  border-radius: 1rem;
 }
 
 
