--- a/client/vite-project/src/index.css
+++ b/client/vite-project/src/index.css
@@ -162,7 +162,7 @@ th, td {
 
 #overlay {
   position: fixed; /* Sit on top of the page content */
-  display: none; /* Hidden by default */
+  display: block; /* Visible by default */
   width: 100%; /* Full width (cover the whole page) */
   height: 100%; /* Full height (cover the whole page) */
   top: 0;
