--- a/client/vite-project/src/index.css
+++ b/client/vite-project/src/index.css
@@ -172,4 +172,65 @@ th, td {
   background-color: rgba(0,0,0,0.5); /* Black background with opacity */
   z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
   cursor: pointer; /* Add a pointer on hover */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-Container{
+  border-radius: 0.5rem;
+  width: 30vw;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  padding: 1.5rem;
+}
+
+.edit-Expense-Form{
+  gap: 1rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.edit-Expense-Form input, .edit-Expense-Form select {
+  font-size: 1.5rem;
+}
+
+.title{
+  text-align: center;
+  font-size: 2.5rem;
+}
+
+.closeBtn{
+  display: flex;
+  justify-content: flex-end;
+}
+
+.closeBtn button{
+  padding: 0.5rem;
+  background-color: black;
+  border: none;
+  border-radius: 40%;
+  font-size: 25px;
+  cursor: pointer;
+  color: white;
+  
+}
+
+.saveChangesBtn{
+  display: flex;
+  justify-content: center;
+}
+
+.saveChangesBtn button{
+  width: 50%;
+  text-align: center;
+  background-color: black;
+  color: white;
+  font-size: 1.5rem;
+  border: none;
+  border-radius: 1rem;
+  padding: 1rem;
 }
