--- a/client/vite-project/src/index.css
+++ b/client/vite-project/src/index.css
@@ -77,6 +77,7 @@ body {
 
 .create-expense-form{
   margin: 5rem;
+  margin-bottom: 1.5rem;
   margin-right: 10rem;
   display: flex;
   flex-direction: column;
@@ -101,7 +102,7 @@ body {
   color: white;
   font-size: 1rem;
   border: none;
-  border-radius: 1rem;
+  border-radius: 10px;
 }
 
 .history-btn button{
@@ -110,7 +111,7 @@ body {
   color: white;
   font-size: 1rem;
   border: none;
-  border-radius: 1rem;
+  border-radius: 10px;
   margin-left: 5rem;
   padding: 1.5rem;
 }
