Add media queries to make LoginRegisterPage responsive

--- a/client/vite-project/src/index.css
+++ b/client/vite-project/src/index.css
@@ -255,6 +255,9 @@ th, td {
   /* Other background properties */
 }
 
+
+
+
 .login-register-form{
   background-color: rgba(255, 255, 255, 0.8); 
   border-radius: 10px;
@@ -267,6 +270,25 @@ th, td {
   gap: 1rem;
   padding: 1rem;
   color: black;
+}
+
+@media screen  and (max-width: 330px) {
+  .login-register-form {
+    width: 250px;
+  }
+}
+
+
+@media screen and (min-width: 331px)  and (max-width: 530px) {
+  .login-register-form {
+    width: 250px;
+  }
+}
+
+@media screen and (min-width: 531px) and (max-width: 800px) {
+  .login-register-form {
+    width: 300px;
+  }
 }
 
 .underline{
