--- a/client/vite-project/src/index.css
+++ b/client/vite-project/src/index.css
@@ -5,10 +5,19 @@
 }
 
 body {
+
   font-family: "Bayon", sans-serif;
   font-weight: 400;
   font-style: normal;
+  
 
+}
+
+.container{
+  width: 100%;
+  height: 100vh;
+  background-color:#f0f8ff
+  
 }
 
 .header-container{
