--- a/client/vite-project/src/index.css
+++ b/client/vite-project/src/index.css
@@ -37,22 +37,23 @@ button:hover {
 }
 
 .upper-body{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  
+  display: flex;
+  gap: 10rem;
+  justify-content: center;
+  padding: 5rem;
 }
 
 .chart-container, .label-container{
   position: relative;
-  margin: 1rem;
-  margin-left: 10rem;
   width: 500px;
 }
 
+
+
 .label-container{
-  display: grid;
-  grid-template-columns: 1fr ;
-  
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
   
 }
 
@@ -90,7 +91,7 @@ button:hover {
 }
 
 .create-expense-form{
-  margin: 5rem;
+ margin-top: 5rem;
   margin-bottom: 1.5rem;
   margin-right: 10rem;
   display: flex;
@@ -128,7 +129,6 @@ button:hover {
   font-size: 1rem;
   border: none;
   border-radius: 10px;
-  margin-left: 5rem;
   padding: 1.5rem;
 }
 
