--- a/client/vite-project/src/index.css
+++ b/client/vite-project/src/index.css
@@ -17,10 +17,23 @@ body {
 .container{
   width: 100%;
   height: 100vh;
-  background-color:#f0f8ff
+  background-color:#f0f8ff;
+  display: flex;
+  flex-direction: column;
+
   
   
 }
+
+.upper-body{
+  display: flex;
+  justify-content: center;
+  gap: 3rem;
+ 
+  
+}
+
+
 
 .header-container{
   padding: 1rem;
@@ -36,26 +49,69 @@ button:hover {
   transform: scale(1.05);
 }
 
-.upper-body{
-  display: flex;
-  gap: 10rem;
-  justify-content: center;
-  padding: 5rem;
-}
 
-.chart-container, .label-container{
+
+.chart-container{
+  height: 480px;
+  display: flex;
   position: relative;
-  width: 500px;
+ 
+
 }
 
 
 
 .label-container{
-  margin-top: 2rem;
+  width: 480px;
   display: flex;
   flex-direction: column;
-  
+  margin-left: 500px;
+  margin-top: 80px;
+ 
+
 }
+
+.label{
+  display: flex;
+  margin-bottom: 1rem;
+  gap: 1rem;
+}
+
+.label-colour{
+  width: 20px;
+  height: auto;
+}
+
+
+@media screen and (min-width: 1024px) and (max-width: 1200px) {
+  .chart-container{
+    width: 450px;
+    height: 450px;
+
+  }
+
+  .container{
+    height: 100%;
+    
+  }
+
+  .body{
+    height: 100vh;
+  }
+
+
+  .label-container{
+    flex-direction: row;
+    margin-left: 200px;
+  }
+
+
+
+}
+
+
+
+
 
 
 
@@ -70,35 +126,29 @@ button:hover {
   left: 0;
   top: 40%;
   font-size: 2rem;
+ 
   
 }
 
 
-.label{
-  display: flex;
-  margin-bottom: 1rem;
-  gap: 1rem;
-}
-
-.label-colour{
-  width: 20px;
-  height: auto;
-}
 
 
 .form-container{
   width: 500px;
+  
 }
 
 .create-expense-form{
  margin-top: 5rem;
   margin-bottom: 1.5rem;
-  margin-right: 10rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
   
 }
+
+
+
 
 .create-expense-form input, .create-expense-form select{
   width: 500px;
